tiny fix: panel overflow

--- a/parasolconfigurator/src/App.css
+++ b/parasolconfigurator/src/App.css
@@ -42,11 +42,5 @@
 }
 
 @media screen and (max-width: 900px) {
-  .app-container {
-    display: block;
-  }
-
-  .canvas-container {
-    
-  }
+  
 }
